web/ploddle/web/static/css/ploddle.less
BODY {
	background: url(/static/img/ploddle.png);
	background-size: contain;
	background-attachment: fixed;
	background-repeat: no-repeat;
	background-position: center;
}
FORM {
	margin-bottom: 0px;
}



HEADER {
	position: fixed;
	top: 0px;
	left: 0px;
	right: 0px;
	background: white;
	border-bottom: 1px solid black;
	z-index: 10;
}

ARTICLE {
	position: fixed;
	top: 0px;     /* will be corrected by JS */
	bottom: 0px;  /* as above */
	left: 0px;
	right: 0px;
}

SECTION.main {
	position: absolute;
	top: 0px;     /* will be corrected by JS */
	bottom: 0px;  /* as above */
	left: 0px;
	right: 0px;
	overflow-y: scroll;
	z-index: 0;
}

SECTION.settings {
	position: absolute;
	top: 0px;     /* will be corrected by JS */
	bottom: 0px;  /* as above */
	right: 0px;
	z-index: 5;
	overflow-y: scroll;
	border-left: 1px solid black;

	LABEL {
		display: block;
	}
}
#columns UL {
	list-style: none;
	padding: 0px;
	margin: 0px;
}
#columns LI {
}

FOOTER {
	position: fixed;
	bottom: 0px;
	left: 0px;
	right: 0px;
	background: white;
	border-top: 1px solid black;
	text-align: center;
	z-index: 10;
}

.messageview {
	border-collapse: collapse;
	/*width: 100%;*/
	font-family: monospace;
	font-size: 10px;

	TR TD {
		padding: 2px 6px;
	}
	TR.message TD {
		border-top: 1px solid gray;
		min-width: 64px;
	}
	TR.message:first-child TD {
		border-top: 0px;
	}
	SELECT, INPUT {
		width: 100%;
	}
}

TD.host, TD.timestamp, TD.daemon {
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

#paginator {
	text-align: center;
}

.enabled {
	background: green;
}

.severity-0 {color: black;  background-color: #F44;}
.severity-1 {color: black;  background-color: #F44;}
.severity-2 {color: black;  background-color: #F44;} /* critical */
.severity-3 {color: black;  background-color: #F88;} /* error, fatal */
.severity-4 {color: black;  background-color: #EE2;} /* warning */
.severity-5 {color: black;  background-color: #EE2;}
.severity-6 {color: black;  background-color: #8F8;} /* info */
.severity-7 {color: grey;   background-color: #DFD;} /* debug */
/*
.severity-0:nth-child(odd) {background-color: #E33;}
.severity-1:nth-child(odd) {background-color: #E33;}
.severity-2:nth-child(odd) {background-color: #E33;}
.severity-3:nth-child(odd) {background-color: #E77;}
.severity-4:nth-child(odd) {background-color: #DD1;}
.severity-5:nth-child(odd) {background-color: #DD1;}
.severity-6:nth-child(odd) {background-color: #7E7;}
.severity-7:nth-child(odd) {background-color: #CEC;}
*/

